--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "AFNetworking"]
-	path = AFNetworking
+	path = external/AFNetworking
 	url = git@github.com:AFNetworking/AFNetworking.git
