--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "AFNetworking"]
 	path = external/AFNetworking
-	url = git@github.com:AFNetworking/AFNetworking.git
+	url = git@github.com:mnectarinc/AFNetworking.git
